--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "cdebug"]
 	path = cdebug
 	url = git://github.com/youknowone/cdebug.git
-[submodule "FoundationExtension"]
-	path = FoundationExtension
+[submodule "FoundationExtension-repo"]
+	path = FoundationExtension-repo
 	url = git://github.com/youknowone/FoundationExtension.git
